[project]
name = "dataset-curator"
version = "0.1.0"
description = "Pipeline for creating, cleaning, and curating fine-tuning datasets with quality scoring."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10.0"]
[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-cov>=6.0.0", "ruff>=0.9.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/dataset_curator"]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.ruff]
target-version = "py311"
line-length = 100
